--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.1",
+    "@reduxjs/toolkit": "^2.2.0",
+    "@tanstack/react-query": "^5.0.0-beta.19",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
     "yup": "^1.3.2"
